--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>design-patterns</groupId>
-    <artifactId>design-patterns</artifactId>
-    <packaging>jar</packaging>
-    <name>Design Pattern Examples</name>
-    <description />
+	<artifactId>design-patterns</artifactId>
+	<packaging>jar</packaging>
+	<name>Design Pattern Examples</name>
+	<description />
 	<version>0.0.1-SNAPSHOT</version>
-    
-    <properties>
-    	<maven.compiler.source>1.6</maven.compiler.source>
-    	<maven.compiler.target>1.6</maven.compiler.target>
-    </properties>
-    
+
+	<properties>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -21,6 +23,37 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- system dependencies -->
+		<dependency>
+			<groupId>test-dependency</groupId>
+			<artifactId>cizim-prog-v1</artifactId>
+			<version>0.0.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/cizim-prog-v1.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>test-dependency</groupId>
+			<artifactId>cizim-prog-v2</artifactId>
+			<version>0.0.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/cizim-prog-v2.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>test-dependency</groupId>
+			<artifactId>general-electric</artifactId>
+			<version>0.0.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/general-electric.jar</systemPath>
+		</dependency>		
+		<dependency>
+			<groupId>test-dependency</groupId>
+			<artifactId>philips</artifactId>
+			<version>0.0.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/philips.jar</systemPath>
+		</dependency>		
+		
 	</dependencies>
-	
+
 </project>
